objects/SBQQ__Quote__c.object
<CustomObject>
    <customHelpPage>SBQQ__QuoteHelp</customHelpPage>
    <description>Sales quote for a given opportunity. There may be multiple quotes for a single opportunity.</description>
    <fields>
        <fullName>ACV__c</fullName>
        <formula>SBQQ__NetAmount__c / (   Calculated_Subscription_Term__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Capacity_End_Date__c</fullName>
        <label>Additional Capacity End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_Capacity__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Additional Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_Discount_Amount__c</fullName>
        <formula>SBQQ__AdditionalDiscountAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Anaplan_Email_Address__c</fullName>
        <formula>Case ( SBQQ__Opportunity__r.Sales_Region__c,
&quot;Americas&quot;, &quot;ar.amer@anaplan.com&quot;,
&quot;EMEA&quot;, &quot;ar.emea@anaplan.com&quot;,
&quot;APAC&quot;, &quot;ar.apac@anaplan.com&quot;,
&quot;ar.amer@anaplan.com&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anaplan Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anaplan_Entity_Address_Line_1__c</fullName>
        <label>Anaplan Entity - Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anaplan_Entity_Address_Line_2__c</fullName>
        <label>Anaplan Entity - Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anaplan_Entity_City__c</fullName>
        <label>Anaplan Entity City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anaplan_Entity_Country__c</fullName>
        <label>Anaplan Entity Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anaplan_Entity_Email__c</fullName>
        <label>Anaplan Entity - Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anaplan_Entity_Name__c</fullName>
        <label>Anaplan Entity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anaplan_Entity_Postal_Code__c</fullName>
        <label>Anaplan Entity Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anaplan_Entity_State__c</fullName>
        <label>Anaplan Entity State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Discounted_List_Total__c</fullName>
        <label>Annual Discounted List Total</label>
        <summarizedField>SBQQ__QuoteLine__c.Annual_Discounted_List_Price__c</summarizedField>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Annual_List_Subscription_Total__c</fullName>
        <label>Annual List Subscription Total</label>
        <summarizedField>SBQQ__QuoteLine__c.Annual_List_Price__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Is_Subscription__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Annual_List_Total__c</fullName>
        <label>Annual List Total</label>
        <summarizedField>SBQQ__QuoteLine__c.Annual_List_Price__c</summarizedField>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Annual_Net_Total__c</fullName>
        <label>Annual Subscription Net Total</label>
        <summarizedField>SBQQ__QuoteLine__c.Net_Unit_Price_ACV_Rollup__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Is_Subscription__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ApprovalStatus__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recalled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Auto_Renewal__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Auto-Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Average_Discount_per_Product__c</fullName>
        <formula>IF (SBQQ__RegularAmount__c = 0, 
0,
( (SBQQ__RegularAmount__c -  SBQQ__NetAmount__c) /  SBQQ__RegularAmount__c ))</formula>
        <label>Average Discount (per Product)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Address_Line_1__c</fullName>
        <formula>Billing_Contact__r.MailingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Contact - Address Line 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Address_Line_2__c</fullName>
        <formula>Billing_Contact__r.MailingCity + &apos;, &apos; +  
Billing_Contact__r.MailingState + &apos; &apos; +  
Billing_Contact__r.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Contact - Address Line 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Country__c</fullName>
        <formula>Billing_Contact__r.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Contact - Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Email__c</fullName>
        <formula>Billing_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Contact - Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Fax__c</fullName>
        <formula>Billing_Contact__r.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Contact - Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Name__c</fullName>
        <formula>Billing_Contact__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Phone__c</fullName>
        <formula>Billing_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Contact - Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes (Billing Contact)</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Justification__c</fullName>
        <inlineHelpText>Enter your justification before submitting for approvals</inlineHelpText>
        <label>Business Justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Calculated_End_Date_Old__c</fullName>
        <label>Calculated End Date (Used For Display)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calculated_End_Date__c</fullName>
        <formula>IF( NOT( ISBLANK( SBQQ__EndDate__c ) ) ,
SBQQ__EndDate__c ,
DATE( YEAR( SBQQ__StartDate__c ) +
floor( ( MONTH( SBQQ__StartDate__c ) +  Calculated_Subscription_Term__c  - 1 ) / 12 ) ,
mod( MONTH( SBQQ__StartDate__c ) +  Calculated_Subscription_Term__c  - 1 , 12 ) + 1 ,
DAY( SBQQ__StartDate__c ) ) - 1
)</formula>
        <label>Calculated End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calculated_Subscription_Term__c</fullName>
        <formula>IF( SBQQ__SubscriptionTerm__c &gt; 0  , 
SBQQ__SubscriptionTerm__c ,
(( SBQQ__EndDate__c  - SBQQ__StartDate__c) / 30.4375)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Subscription Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capacity_GB__c</fullName>
        <formula>5 *  Workspace_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capacity (GB)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Term_Approval__c</fullName>
        <formula>IF( SBQQ__SubscriptionTerm__c &lt; 36 &amp;&amp; Net_Amount_ACV__c &lt; 250000, &apos;MD Approval&apos;, 
    IF (SBQQ__SubscriptionTerm__c &lt; 36 &amp;&amp; Net_Amount_ACV__c &gt; 250000, &apos;CEO Approval&apos;, &apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Term Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractedAccountID__c</fullName>
        <formula>CASE( TEXT( Use_Case__c ) , 
&quot;Platform&quot;,  $Setup.Default_Contract_Pricing_Account__c.Platform_Account__c ,
&quot;SPM Bundle&quot;, $Setup.Default_Contract_Pricing_Account__c.SPM_Bundle_Account__c,
&quot;Territory and Quota&quot;, $Setup.Default_Contract_Pricing_Account__c.Territory_and_Quota_Account__c ,
&quot;Sales Forecasting&quot;,  $Setup.Default_Contract_Pricing_Account__c.Sales_Forecasting_Account__c  ,
&quot;Capacity Planning&quot;,  $Setup.Default_Contract_Pricing_Account__c.Capacity_Planning_Account__c  ,
&quot;Deal Desk&quot;,  $Setup.Default_Contract_Pricing_Account__c.Deal_Desk_Account__c  ,
&quot;Commissions Crediting &amp; Modeling&quot;,  $Setup.Default_Contract_Pricing_Account__c.Commission_Crediting_Modeling__c,
&quot;FP&amp;A&quot;,  $Setup.Default_Contract_Pricing_Account__c.FP_A_Account__c,
&quot;Planning Budgeting Forecasting&quot;, $Setup.Default_Contract_Pricing_Account__c.Planning_Budgeting_Forecasting_Account__c,
&quot;Operational Finance&quot;, $Setup.Default_Contract_Pricing_Account__c.Operational_Finance_Account__c  ,
&quot;Financial Consolidation&quot;,  $Setup.Default_Contract_Pricing_Account__c.Financial_Consolidation_Account__c  ,
&quot;&quot;
)</formula>
        <label>ContractedAccountID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_Capacity__c</fullName>
        <label>Count - Capacity</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Product_Name_Rollup__c</field>
            <operation>contains</operation>
            <value>Capacity Planning</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Contributor__c</fullName>
        <label>Count - Contributor</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Product_Name_Rollup__c</field>
            <operation>startsWith</operation>
            <value>Contributor (s)</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Model_Builder__c</fullName>
        <label>Count - Model Builder</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Product_Name_Rollup__c</field>
            <operation>contains</operation>
            <value>Model Builder</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Project_Management__c</fullName>
        <label>Count - Project Management</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Product_Name_Rollup__c</field>
            <operation>contains</operation>
            <value>Project Manager</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Services__c</fullName>
        <label>Count - Services</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Product_Family_Rollup__c</field>
            <operation>equals</operation>
            <value>Services</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Solution_Architect__c</fullName>
        <label>Count - Solution Architect</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Product_Name_Rollup__c</field>
            <operation>contains</operation>
            <value>Solution Architect</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Subscription__c</fullName>
        <label>Count - Subscription</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Is_Subscription__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Training__c</fullName>
        <label>Count - Training</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Product_Name_Rollup__c</field>
            <operation>contains</operation>
            <value>Training</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Viewer__c</fullName>
        <label>Count - Viewer</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Product_Name_Rollup__c</field>
            <operation>startsWith</operation>
            <value>Viewer</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Custom_Invoice_Amount__c</fullName>
        <label>Custom Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Custom_Language__c</fullName>
        <label>Custom Language</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Custom_Price_Hold__c</fullName>
        <label>Custom Price Hold</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Delayed_Start_Date__c</fullName>
        <formula>IF (Revised_Start_Date__c - 30 &gt;  SBQQ__StartDate__c , &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delayed Start Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <formula>SBQQ__AdditionalDiscountAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_from_List_Price__c</fullName>
        <formula>Annual_List_Total__c - Annual_Net_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount from List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_from_Regular_Price__c</fullName>
        <formula>Annual_Discounted_List_Total__c - Annual_Net_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount from Regular Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Displayed_Use_Case_Definition__c</fullName>
        <formula>TEXT ( Use_Case__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Displayed Use Case Definition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Does_Not_Have_Online_Order_Schedule__c</fullName>
        <formula>IF (TEXT( Order_Schedule__c ) = &apos;Online Order Schedule&apos;, FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Does Not Have Online Order Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Does_Not_Have_Opt_Opt_Rights__c</fullName>
        <formula>IF ( ISBLANK(TEXT(Opt_Out_Period__c)), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Does Not Have Opt Opt Rights</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Does_Not_Have_Services__c</fullName>
        <formula>IF ( Count_Services__c &gt; 0, false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Does Not Have Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Early_Renewal__c</fullName>
        <formula>IF ( SBQQ__StartDate__c &lt; SBQQ__Opportunity__r.SBQQ__RenewedContract__r.EndDate , &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Early Renewal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date_Long_Format__c</fullName>
        <formula>IF (ISNULL( Calculated_End_Date_Old__c),&quot;&quot;, 
IF(MONTH( Calculated_End_Date_Old__c )=1, &quot;Jan&quot;, 
IF(MONTH( Calculated_End_Date_Old__c )=2, &quot;Feb&quot;, 
IF(MONTH( Calculated_End_Date_Old__c )=3, &quot;Mar&quot;, 
IF(MONTH( Calculated_End_Date_Old__c )=4, &quot;Apr&quot;, 
IF(MONTH( Calculated_End_Date_Old__c )=5, &quot;May&quot;, 
IF(MONTH( Calculated_End_Date_Old__c)=6, &quot;Jun&quot;, 
IF(MONTH( Calculated_End_Date_Old__c)=7, &quot;Jul&quot;, 
IF(MONTH( Calculated_End_Date_Old__c )=8, &quot;Aug&quot;, 
IF(MONTH( Calculated_End_Date_Old__c )=9, &quot;Sep&quot;, 
IF(MONTH( Calculated_End_Date_Old__c)=10, &quot;Oct&quot;, 
IF(MONTH( Calculated_End_Date_Old__c )=11, &quot;Nov&quot;, 
IF(MONTH( Calculated_End_Date_Old__c )=12, &quot;Dec&quot;, &quot;MMM&quot;)))))))))))) 
&amp; &quot; &quot; &amp; TEXT(DAY( Calculated_End_Date_Old__c )) 
&amp; &quot;, &quot; &amp; TEXT(YEAR ( Calculated_End_Date_Old__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date (Long Format)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extra_Special_Terms__c</fullName>
        <label>Extra Special Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Has_Capacity__c</fullName>
        <formula>IF ( Count_Capacity__c &gt; 0, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Capacity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Contributor__c</fullName>
        <formula>IF ( Count_Contributor__c &gt; 0, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Contributor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Extra_Special_Terms__c</fullName>
        <formula>IF ( ISBLANK (Extra_Special_Terms__c), false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Extra Special Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Model_Builder_Services__c</fullName>
        <formula>AND ( Has_Model_Builder__c ,  Has_Services__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Model Builder Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Model_Builder__c</fullName>
        <formula>IF (  Count_Model_Builder__c  &gt; 0, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Model Builder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_No_Services_Or_In_US__c</fullName>
        <formula>IF ( Count_Services__c = 0 || SBQQ__BillingCountry__c = &apos;US&apos; || SBQQ__BillingCountry__c = &apos;USA&apos; || SBQQ__BillingCountry__c = &apos;United States&apos;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has No Services Or In US</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Online_Order_Schedule__c</fullName>
        <formula>IF (TEXT( Order_Schedule__c ) = &apos;Online Order Schedule&apos;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Online Order Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Opt_Out_Rights__c</fullName>
        <formula>IF ( ISBLANK(TEXT(Opt_Out_Period__c)), FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Opt Out Rights</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Phased_Pricing__c</fullName>
        <formula>IF ( Max_Segment_Index__c &gt; 0, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Phased Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Project_Management__c</fullName>
        <formula>IF (  Count_Project_Management__c &gt; 0, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Project Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Services_And_Not_In_US__c</fullName>
        <formula>IF (  Count_Services__c &gt; 0 &amp;&amp; (SBQQ__BillingCountry__c &lt;&gt; &apos;US&apos; &amp;&amp; SBQQ__BillingCountry__c &lt;&gt; &apos;USA&apos; &amp;&amp; SBQQ__BillingCountry__c &lt;&gt; &apos;United States&apos;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Services And Not In US</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Services__c</fullName>
        <formula>IF (  Count_Services__c &gt; 0, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Solution_Architect__c</fullName>
        <formula>IF (  Count_Solution_Architect__c  &gt; 0, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Solution Architect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Standard_Pricing__c</fullName>
        <formula>IF ( Max_Segment_Index__c &gt; 1, FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Standard Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Subscription__c</fullName>
        <formula>IF (  Count_Subscription__c  &gt; 0, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Training__c</fullName>
        <formula>IF (  Count_Training__c  &gt; 0, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Viewer__c</fullName>
        <formula>IF ( Count_Viewer__c &gt; 0, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Viewer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Workspace__c</fullName>
        <formula>IF (  Workspace_Qty__c  &gt; 0, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Workspace</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IP_Changes_to_Anaplan_NDA__c</fullName>
        <label>IP Changes to Anaplan NDA</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Include_Additional_Capacity_and_Users_OL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Additional Capacity / User (OLD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Additional_Capacity_and_Users__c</fullName>
        <formula>IF ( ISBLANK(Custom_Price_Hold__c ), FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include Additional Capacity and Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Limited_Contributor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Limited Contributor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Opt_Out_Right__c</fullName>
        <defaultValue>false</defaultValue>
        <description>No Longer Used</description>
        <label>Include Opt-Out Right</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Temporary_Workspace_Capacity_Inc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Temporary Workspace Capacity Inc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Use_Case_Restriction__c</fullName>
        <formula>IF (TEXT( Use_Case__c ) = &apos;Platform&apos;, false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include Use Case Restriction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indemnification_changes__c</fullName>
        <label>Indemnification changes</label>
        <picklist>
            <picklistValues>
                <fullName>Item 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Item 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Fixed_Fee__c</fullName>
        <formula>IF ( TEXT(PS_Type__c) = &apos;Fixed&apos;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Fixed Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Option_1__c</fullName>
        <formula>IF (  TEXT(Print_Layout__c) = &apos;Show List Price&apos; &amp;&amp; Has_Subscription__c, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Option 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Option_2__c</fullName>
        <formula>IF (  TEXT(Print_Layout__c) = &apos;Show Discounted List Price&apos; &amp;&amp; Has_Subscription__c, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Option 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Option_3__c</fullName>
        <formula>IF ( TEXT(Print_Layout__c) = &apos;Show Net Price without Discount&apos; &amp;&amp; Has_Subscription__c, true, false)</formula>
        <label>Is Option 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_T_M__c</fullName>
        <formula>IF ( TEXT(PS_Type__c) = &apos;T&amp;M&apos;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is T&amp;M</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Year_ACV__c</fullName>
        <formula>IF (X3rd_Yr_ACV__c &lt;&gt; 0, X3rd_Yr_ACV__c, IF (X2nd_Yr_ACV__c &lt;&gt; 0, X2nd_Yr_ACV__c, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Year ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Legal_Location_Not_California__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal Location Not California</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Liability_Limit__c</fullName>
        <label>Liability Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Link_To_Order_Schedule__c</fullName>
        <label>Link To Order Schedule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MD_Approver_ID__c</fullName>
        <formula>CASE( Sales_Rep_Role__c, 
&quot;AE - East&quot;, &quot;005A0000004Hhv9&quot; /* Dennis Dresser */, 
&quot;Alliance East&quot;, &quot;005A0000004Hhv9&quot; /* Dennis Dresser */, 
&quot;AE - South East&quot;, &quot;005A0000004Hhv9&quot; /* Dennis Dresser */, 
&quot;AE - Central&quot;, &quot;005A0000004Hhv9&quot; /* Dennis Dresser */, 
&quot;Regional Manager - Central&quot;, &quot;005A0000004Hhv9&quot; /* Dennis Dresser */, 
&quot;Alliance Central&quot;, &quot;005A0000004Hhv9&quot; /* Dennis Dresser */, 
&quot;AE - West&quot;, &quot;005A0000004Hhv9&quot; /* Dennis Dresser */, 
&quot;Alliance West&quot;, &quot;005A0000004Hhv9&quot; /* Dennis Dresser */, 
&quot;AE - Bay Area West&quot;, &quot;005A0000004Hhv9&quot; /* Dennis Dresser */, 
&quot;AE - Australia / NZL&quot;, &quot;005A0000003Xr9W&quot; /* Samir Neji */, 
&quot;AE - India, South Korea&quot;, &quot;005A0000003Xr9W&quot; /* Samir Neji */, 
&quot;AE - Malaysia / Thailand&quot;, &quot;005A0000003Xr9W&quot; /* Samir Neji */, 
&quot;Alliance - Malaysia / Thailand&quot;, &quot;005A0000003Xr9W&quot; /* Samir Neji */, 
&quot;AE - Singapore, Philippines, Hongkong&quot;, &quot;005A0000003Xr9W&quot; /* Samir Neji */, 
&quot;Country Manager Singapore, Philippines, Hongkong&quot;, &quot;005A0000003Xr9W&quot; /*Samir Neji*/, 
&quot;AE - Benelux&quot;, &quot;005A0000003ryBi&quot; /* Laurent Lefouet */, 
&quot;Benelux Country Manager&quot;, &quot;005A0000003XptD&quot; /* Laurent Lefouet */, 
&quot;AE - Eastern Europe&quot;, &quot;005A0000003XptD&quot; /* Laurent Lefouet */, 
&quot;AE - France&quot;, &quot;005A0000003XptD&quot; /* Laurent Lefouet */, 
&quot;AE - Nordics&quot;, &quot;005A0000003XptD&quot; /* Laurent Lefouet */, 
&quot;AE - UK&quot;, &quot;005A0000003XptD&quot; /* Laurent Lefouet */, 
&quot;AE - UK&quot;, &quot;005A0000003XptD&quot; /* Laurent Lefouet */, 
&quot;005A0000004Hhv9&quot; /* Dennis Dresser */)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MD Approver ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MD_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MD Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketing_Publicity_Description__c</fullName>
        <defaultValue>&quot;Name &amp; Logo: Anaplan may use Client&apos;s name and logo on Anaplan&apos;s website and marketing collateral subject to compliance with branding guidelines provided by Client.&quot;
+ BR() + BR() +
&quot;Press Release: Upon completion of implementation services, Anaplan may issue one press release, distribution costs paid by Anaplan, to announce Client&apos;s selection and implementation of Anaplan and the Anaplan Service.  No financial or contract details will be included.&quot;
+ BR() + BR() +
&quot;Case Study: Client will work with Anaplan to create a case study describing how Anaplan has benefited its operations.  Anaplan will pay all costs associated with creation and distribution of the case study.  Distribution of the case study and an accompanying press release is subject to Clients prior approval.&quot;
+ BR() + BR() +
&quot;Reference Calls: Subject to Clients availability, Client will participate in reference calls as reasonably requested by Anaplan in advance.&quot;</defaultValue>
        <label>Marketing &amp; Publicity Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Material_changes_to_scope__c</fullName>
        <label>Material changes to scope</label>
        <type>TextArea</type>
    </fields>
</CustomObject>